[package]
authors = ["Foo <foo@bar.com>"]
name = "rocket-blog"
version = "0.1.0"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
dotenv = "0.10.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
